<resources>
    <string name="app_name">PediTaxiChoferV1</string>
    <string name="not_log_in">No se pudo iniciar sesión</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="revoke">Revocar</string>
    <string name="not_close_session">No se pudo cerrar sesión</string>
    <string name="not_revoke">No se pudo revocar el acceso</string>
    <string name="not_firebase_auth">No se pudo autenticar con Firebase</string>
    <string name="insert">Insertar Datos</string>
    <string name="brand">Marca</string>
    <string name="color">Color</string>
    <string name="placa">Placa</string>
    <string name="Nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="ci">Ci</string>
</resources>
